# mad2-final

./: README.md
backend/: .env.example  .gitignore  celery_worker.py  config.py  main.py  models.py  pyproject.toml  tasks.py
backend/instance/: main.db
backend/routes/: __init__.py  admin.py  auth.py  user.py
frontend/: README.md  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/admin/: Chapters.vue  Dashboard.vue  Questions.vue  Quizzes.vue  Subjects.vue  Users.vue
frontend/src/components/auth/: Login.vue  Register.vue
frontend/src/components/common/: Toast.vue
frontend/src/components/icons/: IconTooling.vue
frontend/src/components/user/: Dashboard.vue  Quiz.vue  QuizAttempt.vue  QuizDetailsModal.vue  QuizReview.vue  QuizSummary.vue  Quizzes.vue  Scores.vue  SubjectList.vue  UserLayout.vue
frontend/src/router/: index.js
frontend/src/utils/: api.js
